# omniml

./: .gitignore  README.md  dune-project  flake.nix  omniml.opam  omniml.opam.template
.github/workflows/: ci.yml
examples/: polyparams.ml  power.ml
lib/ast/: ast.ml  ast_builder.ml  dune
lib/constraint/: constraint.ml  constraint.mli  dune
lib/constraint_solver/: constraint.ml  decoded_type.ml  dune  generalization.ml  guard_set.ml  guard_set.mli  import.ml  omniml_constraint_solver.ml  omniml_constraint_solver.mli  principal_shape.ml  principal_shape.mli  scheduler.ml  scheduler.mli  solver.ml  structure.ml  tree.ml  tree.mli  type.ml  types.ml
lib/error/: dune  import.ml  omniml_error.ml  omniml_error.mli
lib/main/: dune  omniml_main.ml  omniml_main.mli
lib/options/: dune  omniml_options.ml  omniml_options.mli
lib/parser/: dune  lexer.mll  omniml_parser.ml  omniml_parser.mli  parser.mly
lib/parser/test/: dune  import.ml  test_lexer.ml  test_parser.ml
lib/source/: dune  (+2 more)
nix/: omniml.nix
tex/: Makefile  XXX.sty  abstract.md  acknowledgements.tex  arxiv-abstract.md  arxiv.sh  cam-letter.cls  draft.tex  llproof.sty  metavar.sty  myabbreviations.sty  mybiblio.sty  mycolors.sty  mycomments.sty  myhyperref.sty  mymath.sty  myprogram.sty  mywrapfig.sty  notations.sty  popl26-author-response-draft.md  popl26-reviews-and-comments.md  response.md  reversion.sty  suspended.bib  suspended.cfg  suspended.draft.cfg  suspended.final.cfg  suspended.final.tex  suspended.rev  suspended.sty  suspended.tex  toplascl.tex  warnings.ok  wits.submit.tex  wits.tex
(+54 files in other folders)
