(library
 (name omniml_parser)
 (public_name omniml.parser)
 (libraries core omniml.ast omniml.error omniml.source fmt)
 (preprocess
  (pps ppx_jane)))

(ocamllex lexer)

(menhir
 (modules token)
 (flags --only-tokens))

(menhir
 (merge_into parser)
 (modules token parser)
 (flags --explain --no-dollars --external-tokens Token))
